--- a/css/main.scss
+++ b/css/main.scss
@@ -1265,29 +1265,27 @@ main {
       .right-box {
         display:block;
         .news, .activity{
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
           width: 460px;
           height: calc(50vh - 46px);
-          padding:0 70px 60px;
+          //padding:0 70px 60px;
+          &::before{
+            content: '';
+            display: block;
+            width:100%;
+            height:30%;
+            background: url("/images/bg_main_esg_news.png") no-repeat 50% 50%;
+            background-size: auto 100%;
+          }
           h3{
-            position: relative;
-            padding-top:253px;
+            margin-top: 35px;
             font-weight:700;
             font-size:17px;
-            line-height:27px;
             color:#00498C;
-            text-align: center;
-            &::before{
-              content: '';
-              display: block;
-              position: absolute;
-              top:50%;
-              left:50%;
-              transform:translateX(-50%) translateY(-50%);
-              width:180px;
-              height:148px;
-              background: url("/images/bg_main_esg_news.png") no-repeat 50% 50%;
-              background-size: contain;
-            }
+            line-height: 27px;
           }
           p{
             margin-top:12px;
@@ -1299,7 +1297,7 @@ main {
           }
           .btn_link{
             display: block;
-            width:100%;
+            width:320px;
             height:50px;
             margin-top:20px;
             background-color: #00498C;
@@ -1336,12 +1334,12 @@ main {
         }
         .activity {
           background-color: #00498C;
+          &::before{
+            background: url("/images/bg_main_esg_act.png") no-repeat 50% 50%;
+            background-size: contain;
+          }
           h3{
             color:#8CE0FF;
-            &::before{
-              background: url("/images/bg_main_esg_act.png") no-repeat 50% 50%;
-              background-size: contain;
-            }
           }
           p{
             color:#FFFFFF;
@@ -1373,6 +1371,26 @@ main {
 }
 @media all and (min-width:1321px) {
   main {
+  }
+}
+
+@media all and (max-height:900px) {
+  .esg {
+    .right-box {
+      .news, .activity {
+        &::before {
+          content: '';
+          display: block;
+          width: 100%;
+          height: 25%;
+          background: url("/images/bg_main_esg_news.png") no-repeat 50% 50%;
+          background-size: auto 100%;
+        }
+        h3 {
+          margin-top: 17px!important;
+        }
+      }
+    }
   }
 }
 @media screen and (max-aspect-ratio: 1219/685) {
